--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <div class="localisation">
             <i class="icon fa-solid fa-location-dot"></i>
-            <form action="">
+            <form>
                 <input type="text" placeholder="Paris, Belleville" class="localisation__form">
             </form>
         </div>
