--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -172,7 +172,7 @@
 			<li><i class="icon fa-solid fa-utensils"></i>Proposer un restaurant</li>
 			<li><i class="icon fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
 			<li>Mentions légales</li>
-			<li><a href="mailto:">Contact</a></li>
+			<li><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
 		</ul>
 	</footer>
 </body>
